--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -68,6 +68,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\AxleInfo.cs" />
     <Compile Include="Assets\Scripts\CameraController.cs" />
+    <Compile Include="Assets\Scripts\ChatWindow.cs" />
     <Compile Include="Assets\Scripts\CircuitController.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\PlayerInfo.cs" />
